# 2024L-DSAdvancedML

./: README.md
Kaznowska_Smolen_Szymplinski/: optimizers.py  utils.py
[P1] Glinka, Miszalska, Wojewoda/projects/project1/group2/: adam.py  visualizations.py
projects/project1/group1/Borowski_Matuszewski_Roguski/: classification_performance_analysis.ipynb
projects/project1/group1/Kucia_Trochimiak_Taczała/: create_interactons.py
projects/project1/group2/: README.md  adam.py  experiments.py  irls.py  load_data.py  requirements.txt  sgd.py  visualizations.py
projects/project1/group2/Glinka_Miszalska_Wojewoda/: experiments.py  irls.py  load_data.py  sgd.py
projects/project1/group2/Kosiuk_Majczyk_Skowroński/: README.md
projects/project1/group3/: 3_small_datasets.ipynb  Adam.ipynb  Load_data_WP.ipynb  SGD_algorithm2.ipynb  SGD_algorithm3.ipynb  SGD_algorithm_final.ipynb  aml_proj1_IWLS.ipynb  aml_proj1_datasets_K.ipynb  collinearity_removal.py
projects/project1/group3/Gruszkowska_Łągiewka_Zalewski/: experiments.ipynb  preprocess.py
projects/project1/group3/Niziołek_Zagórski/codes/: README.md  base_model.py  collinear.ipynb  convergence.ipynb  data.py  experiment.py  library_implementations.py  logistic_adam.py  logistic_iwls.py  logistic_sgd.py  main.ipynb  pyproject.toml
projects/project1/group3/Niziołek_Zagórski/codes/convergence/: large1.csv  large2.csv  large3.csv  large4.csv  large5.csv  large6.csv  small1.csv  small2.csv  test.csv
projects/project1/group3/Niziołek_Zagórski/codes/plots/: convergence.eps  task32.eps  task34.eps  task35.eps
(+1083 files in other folders)
