[tool.poetry]
name = "aml-p1"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.4"
pandas = "^2.2.1"
scikit-learn = "^1.4.1.post1"
scipy = "^1.12.0"
pip = "^24.0"
ipykernel = "^6.29.3"
ucimlrepo = "^0.0.6"
certifi = "^2024.2.2"
seaborn = "^0.13.2"
collinearity = "^0.6.1"
statsmodels = "^0.14.1"
openml = "^0.14.2"
setuptools = "^69.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
